--- a/ansible/roles/lamp.yaml
+++ b/ansible/roles/lamp.yaml
@@ -1,6 +1,6 @@
 - name: install LAMP Stack
   remote_user: ubuntu
-  hosts: local
+  hosts: all
   become: true
   become_user: root
   gather_facts: true
