--- a/ansible/roles/wordpress.yaml
+++ b/ansible/roles/wordpress.yaml
@@ -1,6 +1,6 @@
 - name: Install WordPress
   remote_user: ubuntu
-  hosts: local
+  hosts: all
   become: true
   become_user: root
   gather_facts: true
